--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,6 +2,9 @@
 
 <ul>
     <% @tasks.each do |task| %>
-        <li><%= task.title %></li>
+        <p>
+            <%= task.id %>
+            <%= task.title %>
+        </p>
     <% end %>
 </ul>
